[gd_scene load_steps=26 format=2]

[ext_resource path="res://Entities/knight/knight.gd" type="Script" id=1]
[ext_resource path="res://Components/sprite/entity_sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/knight/knight.png" type="Texture" id=3]
[ext_resource path="res://Components/entity_push/entity_push.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/hurtbox/hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/brain/brain.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/sleeper/sleeper.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/stats/stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://Components/brain/movement_lobe/movement_lobe.tscn" type="PackedScene" id=9]
[ext_resource path="res://Effects/entity_effects/entity_effects.tscn" type="PackedScene" id=10]
[ext_resource path="res://Entities/Attacks/Melee/slash/slash.tscn" type="PackedScene" id=11]
[ext_resource path="res://Components/health_bar/health_bar.tscn" type="PackedScene" id=12]
[ext_resource path="res://Components/brain/memory_lobe/memory_lobe.tscn" type="PackedScene" id=13]
[ext_resource path="res://Components/brain/action_lobe/action_lobe.tscn" type="PackedScene" id=14]
[ext_resource path="res://Components/brain/action_lobe/action/action.tscn" type="PackedScene" id=15]
[ext_resource path="res://Components/brain/movement_lobe/spring/spring.tscn" type="PackedScene" id=16]
[ext_resource path="res://Components/sound_player/foot_stepper/foot_stepper.tscn" type="PackedScene" id=17]
[ext_resource path="res://Components/held_item/held_item.tscn" type="PackedScene" id=18]
[ext_resource path="res://Entities/Item_Pickups/sword/sword.png" type="Texture" id=19]
[ext_resource path="res://Entities/knight/knight_back.png" type="Texture" id=20]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.0
height = 4.0

[sub_resource type="Animation" id=4]
resource_name = "stand"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_local_to_scene = true
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[node name="knight" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
ACCELERATION = 180
TOP_SPEED = 55
FORCE_MULT = 0.65
truName = "knight"
faction = "blue_kingdom"
MELEE = ExtResource( 11 )
attack_cooldown_time = 1.7

[node name="stats" parent="." instance=ExtResource( 8 )]
MAX_HEALTH = 2
HEALTH = 2
DEFENCE = 3

[node name="sprite" parent="." instance=ExtResource( 2 )]
material = SubResource( 1 )
texture = ExtResource( 3 )
hframes = 4
vframes = 2
frame = 4
auto_flip_mode = 2
shadow_size = 0
back_texture = ExtResource( 20 )

[node name="entityPush" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="entityPush" index="0"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="hurtbox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="sleeper" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[node name="brain" parent="." instance=ExtResource( 6 )]

[node name="movement_lobe" parent="brain" instance=ExtResource( 9 )]
general_springs = {
"friendly": "",
"hostile": "spring",
"neutral": ""
}

[node name="spring" parent="brain/movement_lobe" instance=ExtResource( 16 )]
DISTANCE = 14

[node name="memory_lobe" parent="brain" instance=ExtResource( 13 )]
MEMORY_TIME = 6.5

[node name="action_lobe" parent="brain" instance=ExtResource( 14 )]

[node name="action" parent="brain/action_lobe" instance=ExtResource( 15 )]
best_distance = 16
COOLDOWN = 1.7
GLOBAL_COOLDOWN = true

[node name="healthBar" parent="." instance=ExtResource( 12 )]
margin_left = -10.3945
margin_top = -13.3911
margin_right = 10.6055
margin_bottom = -9.38938

[node name="move_animations" type="AnimationPlayer" parent="."]
anims/stand = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="foot_stepper" parent="." instance=ExtResource( 17 )]

[node name="entity_effects" parent="." instance=ExtResource( 10 )]
death_type = 3

[node name="held_item" parent="." instance=ExtResource( 18 )]
TARGETING = 1

[node name="anchor" parent="held_item" index="0"]
position = Vector2( 6, 0 )

[node name="sprite" parent="held_item/anchor" index="0"]
texture = ExtResource( 19 )
offset = Vector2( 0, -4 )
hframes = 1

[connection signal="action" from="brain/action_lobe" to="." method="_on_action_lobe_action"]

[editable path="entityPush"]
[editable path="hurtbox"]
[editable path="held_item"]
